--- a/index.html
+++ b/index.html
@@ -26,66 +26,61 @@
     <section class="page">
       <h1 class="head-1">Memories</h1>
       <p class="head-para">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-        perspiciatis accusamus corporis est. Recusandae blanditiis sit sunt
-        earum porro ad? Mollitia aspernatur necessitatibus ut ea natus velit
-        dolor temporibus quaerat. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Ex fugit laborum perspiciatis fuga, architecto alias
-        placeat maiores, saepe tempore exercitationem cumque debitis quod?
-        Explicabo iure veniam maiores quae, ad eius.
+        Since its inception in 2018, Adhyaaya has been the talk of the town for
+        the past 4 years. Every year we’ve exceeded our limits and set the
+        benchmarks even higher. We’ve continued the legacy every year with a new
+        positivity and teamwork. We adapted to the situation as it demanded from
+        us. We hope to keep going from strength to strength. Each of these
+        pictures has their own story to tell. Take a glimpse through the past
+        iterations of Adhyaaya.
+      </p>
+      <p class="head-para-mobile">
+        Take a glimpse through the past iterations of Adhyaaya.
       </p>
       <div class="card-container">
-        <a href="#main4"
-          ><div
-            class="card"
-            style="
-              --image: url('./images/2018-cover.jfif');
-              --angle: -5deg;
-              --x: 5%;
-              --y: 15%;
-              --caption: 'Adhyaaya, 2018';
-            "
-          ></div
-        ></a>
+        <div
+          class="card"
+          style="
+            --image: url('./images/2018-cover.jfif');
+            --angle: -5deg;
+            --x: 5%;
+            --y: 15%;
+            --caption: 'Adhyaaya, 2018';
+          "
+        ></div>
 
-        <a href="#main3">
-          <div
-            class="card"
-            style="
-              --image: url('./images/2019-cover.jpg');
-              --angle: -1deg;
-              --x: -10%;
-              --y: -20%;
-              --caption: 'Adhyaaya, 2019';
-            "
-          ></div
-        ></a>
+        <div
+          class="card"
+          style="
+            --image: url('./images/2019-cover.jpg');
+            --angle: -1deg;
+            --x: -10%;
+            --y: -20%;
+            --caption: 'Adhyaaya, 2019';
+          "
+        ></div>
 
-        <a href="#main2">
-          <div
-            class="card"
-            style="
-              --image: url('./images/2020-cover.jfif');
-              --angle: -4deg;
-              --x: -20%;
-              --y: 5%;
-              --caption: 'Adhyaaya, 2020';
-            "
-          ></div
-        ></a>
+        <div
+          class="card"
+          style="
+            --image: url('./images/2020-cover.jfif');
+            --angle: -4deg;
+            --x: -20%;
+            --y: 5%;
+            --caption: 'Adhyaaya, 2020';
+          "
+        ></div>
 
-        <a href="#main">
-          <div
-            class="card"
-            style="
-              --image: url('./images/2021-cover.jpeg');
-              --angle: 7deg;
-              --x: 10%;
-              --y: -7%;
-              --caption: 'Adhyaaya, 2021';
-            "
-          ></div
-        ></a>
+        <div
+          class="card"
+          style="
+            --image: url('./images/2021-cover.jpeg');
+            --angle: 7deg;
+            --x: 10%;
+            --y: -7%;
+            --caption: 'Adhyaaya, 2021';
+          "
+        ></div>
       </div>
       <div class="all-buttons">
         <a href="#main"
@@ -148,13 +143,13 @@
       <div class="main" id="main">
         <h1>Adhyaaya'21</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-          perspiciatis accusamus corporis est. Recusandae blanditiis sit sunt
-          earum porro ad? Mollitia aspernatur necessitatibus ut ea natus velit
-          dolor temporibus quaerat. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Ex fugit laborum perspiciatis fuga, architecto alias
-          placeat maiores, saepe tempore exercitationem cumque debitis quod?
-          Explicabo iure veniam maiores quae, ad eius.
+          The fourth iteration of Adhyaaya was the most unique and challenging
+          of them all. Due to the pandemic, we had to go completely online in
+          2021. An experience which was fun and challenging at the same time. We
+          continued the legacy of all the signature Adhyaaya events by
+          transforming them into a virtual form completely. We are proud to say
+          that despite the difficulties and hurdles that were in our way, we
+          stood tall in the end with overwhelming success.
         </p>
         <img src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes fs"></div>
@@ -205,13 +200,13 @@
       <div class="main2" id="main2">
         <h1>Adhyaaya'20</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-          perspiciatis accusamus corporis est. Recusandae blanditiis sit sunt
-          earum porro ad? Mollitia aspernatur necessitatibus ut ea natus velit
-          dolor temporibus quaerat. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Ex fugit laborum perspiciatis fuga, architecto alias
-          placeat maiores, saepe tempore exercitationem cumque debitis quod?
-          Explicabo iure veniam maiores quae, ad eius.
+          The third iteration of Adhyaaya was a spectacle to be remembered. The
+          techfest brought a ton of opportunities for the students to prove
+          themselves at a national level. We had a footfall of around 3500+
+          students from all over the country. The wide array of events made sure
+          that it caters to the interest of every student. A huge success that
+          it was, Adhyaaya 2020 truly set a new benchmark for tech fests in
+          Nagpur.
         </p>
         <img src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes2 fs"></div>
@@ -262,13 +257,12 @@
       <div class="main3" id="main3">
         <h1>Adhyaaya'19</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-          perspiciatis accusamus corporis est. Recusandae blanditiis sit sunt
-          earum porro ad? Mollitia aspernatur necessitatibus ut ea natus velit
-          dolor temporibus quaerat. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Ex fugit laborum perspiciatis fuga, architecto alias
-          placeat maiores, saepe tempore exercitationem cumque debitis quod?
-          Explicabo iure veniam maiores quae, ad eius.
+          The second iteration was a different challenge altogether and cheers
+          to the team, we were up to it. The first iteration was a huge success
+          and we had to live up to the expectations this time as well. Many new
+          events and workshops were introduced in order to cater to more and
+          more budding engineers from around the country. The hard work and
+          determination shown by the team made our self belief even stronger.
         </p>
         <img src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes3 fs"></div>
@@ -319,13 +313,14 @@
       <div class="main4" id="main4">
         <h1>Adhyaaya'18</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-          perspiciatis accusamus corporis est. Recusandae blanditiis sit sunt
-          earum porro ad? Mollitia aspernatur necessitatibus ut ea natus velit
-          dolor temporibus quaerat. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Ex fugit laborum perspiciatis fuga, architecto alias
-          placeat maiores, saepe tempore exercitationem cumque debitis quod?
-          Explicabo iure veniam maiores quae, ad eius.
+          The very first iteration of Adhyaaya. It was this year, that we build
+          an technical spectacle in Nagpur right from scratch. The process was a
+          thrilling ride right from the start till the end, through a lot of
+          hardwork, learning and growing, Adhyaaya was born. The event
+          enthralled the students from all over the country and announced itself
+          on the big stage with a bang. A new standard was set for techfests
+          around the region. The glimpses of the magical experience can be seen
+          through the pictures.
         </p>
         <img src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes4 fs"></div>
