--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           that despite the difficulties and hurdles that were in our way, we
           stood tall in the end with overwhelming success.
         </p>
-        <img src="./images/mascot3.png" alt="mascot-ASU" />
+        <img class="m123" src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes fs"></div>
         <div class="mainClose">
           <svg
