--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           it was, Adhyaaya 2020 truly set a new benchmark for tech fests in
           Nagpur.
         </p>
-        <img src="./images/mascot3.png" alt="mascot-ASU" />
+        <img class="m123" src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes2 fs"></div>
         <div class="mainClose">
           <svg
@@ -264,7 +264,7 @@
           more budding engineers from around the country. The hard work and
           determination shown by the team made our self belief even stronger.
         </p>
-        <img src="./images/mascot3.png" alt="mascot-ASU" />
+        <img class="m123" src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes3 fs"></div>
         <div class="mainClose">
           <svg
@@ -322,7 +322,7 @@
           around the region. The glimpses of the magical experience can be seen
           through the pictures.
         </p>
-        <img src="./images/mascot3.png" alt="mascot-ASU" />
+        <img class="m123" src="./images/mascot3.png" alt="mascot-ASU" />
         <div class="mainBoxes4 fs"></div>
         <div class="mainClose">
           <svg
